Fixed overflow

--- a/css/nft-pok-page-desktop-all-breakpoints.css
+++ b/css/nft-pok-page-desktop-all-breakpoints.css
@@ -1112,7 +1112,7 @@
   background-color: var(--purple-mountains-majesty);
   border-radius: 10px;
   display: flex;
-  height: 439px;
+  height: 510px;
   min-width: 423px;
   padding: 19px 5px;
 }
@@ -1131,7 +1131,7 @@
   background-color: var(--purple-mountains-majesty);
   border-radius: 10px;
   display: flex;
-  height: 439px;
+  height: 510px;
   justify-content: flex-end;
   margin-left: 39px;
   min-width: 423px;
@@ -1152,7 +1152,7 @@
   background-color: var(--purple-mountains-majesty);
   border-radius: 10px;
   display: flex;
-  height: 439px;
+  height: 510px;
   margin-left: 38px;
   min-width: 423px;
   padding: 11px;
@@ -1254,7 +1254,7 @@
   background-color: var(--purple-mountains-majesty);
   border-radius: 10px;
   display: flex;
-  height: 439px;
+  height: 510px;
   min-width: 423px;
   padding: 19px 4px;
 }
@@ -1273,7 +1273,7 @@
   background-color: var(--purple-mountains-majesty);
   border-radius: 10px;
   display: flex;
-  height: 439px;
+  height: 510px;
   margin-left: 39px;
   min-width: 423px;
   padding: 19px 6px;
@@ -1293,7 +1293,7 @@
   background-color: var(--purple-mountains-majesty);
   border-radius: 10px;
   display: flex;
-  height: 439px;
+  height: 510px;
   margin-left: 33px;
   min-width: 423px;
   padding: 19px 6px;
